# csscss-haskell

./: .gitignore  LICENSE  README.md  Rakefile  csscss.cabal
spec/: RedundancyCalcSpec.hs  RulesetsSpec.hs  Suite.hs  ValueParserSpec.hs
spec/Development/CSSCSS/: RedundancyCalcSpec.hs  RulesetsSpec.hs
spec/Shorthand/: BackgroundSpec.hs  BorderSpec.hs  FontSpec.hs  ListStyleSpec.hs
spec/Text/CSS/Shorthand/: BackgroundSpec.hs  BorderSpec.hs  FontSpec.hs  ListStyleSpec.hs
src/: CSSCSS.hs  Main.hs  PrintCSS.hs  RedundancyCalc.hs  Rulesets.hs  Shorthand.hs  ValueParser.hs
src/Development/CSSCSS/: RedundancyCalc.hs  Rulesets.hs
src/Shorthand/: Background.hs  Border.hs  Font.hs  ListStyle.hs  Utility.hs
src/Text/CSS/: Shorthand.hs
src/Text/CSS/Shorthand/: Background.hs  Border.hs  Font.hs  ListStyle.hs  Utility.hs
test/: Suite.hs  TestHelper.hs  run
test/Development/CSSCSS/: RedundancyCalcTest.hs  RulesetsTest.hs
