name:           csscss
version:        0.0.1.0
synopsis:       A css redundancy analyzer that analyzes redundancy
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.2

executable csscss
  main-is:         Main.hs
  hs-source-dirs:  src
  ghc-options:     -Wall
  build-depends:   base >= 3 && < 5,
                   css-text >= 0.1,
                   json >= 0.5,
                   text >= 0.11,
                   pretty >= 1.1

