name:                csscss
version:             0.1.0.0
synopsis:            A CSS redundancy analyzer that analyzes redundancy.
description:         csscss will parse all CSS rules and report duplicates
                     to help a developer refactor their styles.
homepage:            https://github.com/zmoazeni/csscss-haskell
license:             MIT
license-file:        LICENSE
author:              Zach Moazeni <zach.moazeni@gmail.com>
maintainer:          Zach Moazeni <zach.moazeni@gmail.com>
copyright:           2013 Zach Moazeni
category:            Development, Web
stability:           Experimental
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:              git
  location:          https://github.com/zmoazeni/csscss.git

executable csscss
  main-is:           CSSCSS.hs
  hs-source-dirs:    src
  ghc-options:       -Wall -fno-warn-unused-do-bind
  build-depends:     base >= 3 && < 5,
                     css-text >= 0.1,
                     json >= 0.5,
                     text >= 0.11,
                     pretty >= 1.1,
                     attoparsec >= 0.10

library
  exposed-modules: Text.CSS.Shorthand,
                   Development.CSSCSS.RedundancyCalc,
                   Development.CSSCSS.Rulesets
  hs-source-dirs:  src
  ghc-options:     -Wall -fno-warn-unused-do-bind
  build-depends:   base >= 3 && < 5,
                   css-text >= 0.1,
                   json >= 0.5,
                   text >= 0.11,
                   pretty >= 1.1,
                   attoparsec >= 0.10

Test-Suite tests
  type:            exitcode-stdio-1.0
  main-is:         Suite.hs
  hs-source-dirs:  src,test
  build-depends:   base >= 3 && < 5,
                   css-text >= 0.1,
                   json >= 0.5,
                   text >= 0.11,
                   pretty >= 1.1,
                   attoparsec >= 0.10,
                   QuickCheck >= 2.5, 
                   HUnit >= 1.2, 
                   test-framework >= 0.8, 
                   test-framework-hunit >= 0.3, 
                   test-framework-quickcheck2 >= 0.3,
                   test-framework-th >= 0.2
